--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  provider: ^4.3.2
+  http: ^0.12.2
+  cached_network_image: ^2.2.0+1
+  connectivity: ^0.4.9
+  flutter_svg: ^0.18.0
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -21,10 +27,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-
-  fonts:
+    - assets/svg/
+  # fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
+
